substrate/frame/support/test/tests/pallet_ui/storage_value_no_generic.stderr
error: Invalid pallet::storage, invalid number of generic generic arguments, expect more that 0 generic arguments.
  --> tests/pallet_ui/storage_value_no_generic.rs:36:16
   |
36 |     type Foo<T> = StorageValue;
   |                   ^^^^^^^^^^^^
